--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -6,8 +6,9 @@
 - [1. 系统级性能优化](#1-系统级性能优化)
 - [2. Perf 简介](#2-perf-简介)
   - [2.1. 基本原理](#21-基本原理)
+  - [2.2. 功能概述](#22-功能概述)
 - [3. 一个简单例子](#3-一个简单例子)
-- [4. 常用命令](#4-常用命令)
+- [4. 一行命令](#4-一行命令)
   - [4.1. 三种类型命令](#41-三种类型命令)
   - [4.2. Listing: 列出事件](#42-listing-列出事件)
   - [4.3. Counting: 计数统计事件](#43-counting-计数统计事件)
@@ -15,23 +16,28 @@
   - [4.5. static tracing: 静态跟踪](#45-static-tracing-静态跟踪)
   - [4.6. Dynamic Tracing: 动态追踪](#46-dynamic-tracing-动态追踪)
   - [4.7. Mixed: 混合使用](#47-mixed-混合使用)
-  - [4.8. Special: 特定](#48-special-特定)
+  - [4.8. Special: 特定命令](#48-special-特定命令)
   - [4.9. Reporting: report分析](#49-reporting-report分析)
-- [5. 演示](#5-演示)
-- [6. Perf的相关依赖](#6-perf的相关依赖)
+- [5. 演示示例](#5-演示示例)
+- [6. Prerequisites: 先决条件](#6-prerequisites-先决条件)
   - [6.1. Symbols: 符号表](#61-symbols-符号表)
-  - [6.2. perf annotate](#62-perf-annotate)
-  - [6.3. Stack Traces](#63-stack-traces)
-  - [6.4. 小结](#64-小结)
-- [7. Perf 安装](#7-perf-安装)
-  - [7.1. 安装依赖库](#71-安装依赖库)
-  - [7.2. 测试](#72-测试)
-  - [7.3. 编译](#73-编译)
-  - [7.4. 安装](#74-安装)
-  - [7.5. 帮助文档](#75-帮助文档)
+  - [6.2. JIT符号表(Java, Node.js)](#62-jit符号表java-nodejs)
+  - [6.3. Stack Traces: 堆栈追踪](#63-stack-traces-堆栈追踪)
+    - [6.3.1. Frame Pointer: 不让忽略frame pointer](#631-frame-pointer-不让忽略frame-pointer)
+    - [6.3.2. Dwarf: 用户级释放堆栈](#632-dwarf-用户级释放堆栈)
+    - [6.3.3. LBR: 硬件能力](#633-lbr-硬件能力)
+    - [6.3.4. 小结](#634-小结)
+- [7. 功能概述](#7-功能概述)
+  - [7.1. 全局性概况](#71-全局性概况)
+  - [7.2. 全局细节](#72-全局细节)
+  - [7.3. 特定功能分析](#73-特定功能分析)
+  - [7.4. perf record](#74-perf-record)
+  - [7.5. 可视化工具perf timechart](#75-可视化工具perf-timechart)
+  - [7.6. 3种使用方式和性能分析的3个过程](#76-3种使用方式和性能分析的3个过程)
+  - [7.7. 使用示例](#77-使用示例)
 - [8. Perf 性能事件](#8-perf-性能事件)
   - [8.1. perf list查看所有性能事件](#81-perf-list查看所有性能事件)
-  - [8.2. 六种类型](#82-六种类型)
+  - [8.2. 六种类型事件](#82-六种类型事件)
     - [8.2.1. Hardware Events (PMCs): 硬件性能事件(PMCs)](#821-hardware-events-pmcs-硬件性能事件pmcs)
     - [8.2.2. Software Events: 软件性能事件](#822-software-events-软件性能事件)
     - [8.2.3. Kernel Tracepoints: 内核态Tracepoints](#823-kernel-tracepoints-内核态tracepoints)
@@ -39,11 +45,11 @@
     - [8.2.5. Dynamic Tracing: 动态追踪](#825-dynamic-tracing-动态追踪)
 - [9. 例子](#9-例子)
   - [9.1. CPU Statistics: CPU统计](#91-cpu-statistics-cpu统计)
-    - [CPU 微架构](#cpu-微架构)
-    - [Detailed Mode](#detailed-mode)
-    - [Specific Counters](#specific-counters)
-    - [Raw Counters](#raw-counters)
-    - [Other Options](#other-options)
+    - [9.1.1. CPU 微架构](#911-cpu-微架构)
+    - [9.1.2. Detailed Mode](#912-detailed-mode)
+    - [9.1.3. Specific Counters](#913-specific-counters)
+    - [9.1.4. Raw Counters](#914-raw-counters)
+    - [9.1.5. Other Options](#915-other-options)
   - [9.2. Timed Profiling:](#92-timed-profiling)
   - [9.3. Event Profiling:](#93-event-profiling)
   - [9.4. Static Kernel Tracing: 静态内核态追踪](#94-static-kernel-tracing-静态内核态追踪)
@@ -51,24 +57,24 @@
   - [9.6. Dynamic Tracing](#96-dynamic-tracing)
   - [9.7. Scheduler Analysis](#97-scheduler-analysis)
   - [9.8. eBPF](#98-ebpf)
-    - [8.2.6.](#826)
-    - [8.2.7. 事件限定符](#827-事件限定符)
-  - [8.3. 性能事件的属性](#83-性能事件的属性)
-    - [8.3.1. PMI中断和PEBS中断](#831-pmi中断和pebs中断)
-    - [8.3.2. 性能事件的精度级别](#832-性能事件的精度级别)
-    - [8.3.3. 其他属性](#833-其他属性)
-  - [8.4. 没有预定义字符描述的硬件性能事件](#84-没有预定义字符描述的硬件性能事件)
-  - [8.5. 性能事件指定错误](#85-性能事件指定错误)
+    - [9.8.1.](#981)
+    - [9.8.2. 事件限定符](#982-事件限定符)
+  - [9.9. 性能事件的属性](#99-性能事件的属性)
+    - [9.9.1. PMI中断和PEBS中断](#991-pmi中断和pebs中断)
+    - [9.9.2. 性能事件的精度级别](#992-性能事件的精度级别)
+    - [9.9.3. 其他属性](#993-其他属性)
+  - [9.10. 没有预定义字符描述的硬件性能事件](#910-没有预定义字符描述的硬件性能事件)
+  - [9.11. 性能事件指定错误](#911-性能事件指定错误)
 - [10. Visualizations: 可视化](#10-visualizations-可视化)
   - [10.1. Flame Graphs: 火焰图](#101-flame-graphs-火焰图)
     - [10.1.1. 示例](#1011-示例)
     - [10.1.2. 生成](#1012-生成)
-- [11. Perf 功能概述](#11-perf-功能概述)
-  - [11.1. 全局性概况](#111-全局性概况)
-  - [11.2. 全局细节](#112-全局细节)
-  - [11.3. 特定功能分析](#113-特定功能分析)
-  - [11.4. perf record](#114-perf-record)
-  - [11.5. 可视化工具perf timechart](#115-可视化工具perf-timechart)
+- [11. Perf 安装](#11-perf-安装)
+  - [11.1. 安装依赖库](#111-安装依赖库)
+  - [11.2. 测试](#112-测试)
+  - [11.3. 编译](#113-编译)
+  - [11.4. 安装](#114-安装)
+  - [11.5. 帮助文档](#115-帮助文档)
 - [12. 简单示例](#12-简单示例)
   - [12.1. cycles原理](#121-cycles原理)
 - [13. 参考](#13-参考)
@@ -83,18 +89,18 @@
 
 **系统级性能优化**包含**2个阶段**：
 
-1. 性能剖析（**performance profiling**）：**寻找性能瓶颈**，查找引发性能问题的原因及热点代码。
-2. 代码优化：针对具体的性能问题而**优化代码与编译选项**，以改善软件性能。
+1. **性能剖析**（**performance profiling**）：**寻找性能瓶颈**，查找引发性能问题的原因及热点代码。
+2. **代码优化**：针对具体的性能问题而**优化代码与编译选项**，以改善软件性能。
 
-在代码优化阶段往往需要凭借开发者的经验，编写简洁高效的代码，甚至在汇编 语言级别合理使用各种指令，合理安排各种指令的执行顺序。
+在代码优化阶段往往需要凭借开发者的经验，编写简洁高效的代码，甚至在汇编语言级别合理使用各种指令，合理安排各种指令的执行顺序。
 
 而在**性能剖析阶段**，则需要借助于现有的**profiling工具**，如 perf，VTune，Oprofile 等。
-
-在Linux下诊断的工具比较多，比如systemtap, dtrace, perf。
 
 # 2. Perf 简介
 
 本文将介绍一下perf的用法，网上很多叫法如`perf_events` , `perf profiler` , `Performance Counters for Linux(Linux性能计数器, PCL)`。叫法不同，都指perf。
+
+最初的时候, 它叫做 `Performance counter`, 在 `2.6.31` 中第一次亮相. 此后他成为内核开发最为活跃的一个领域. 在 `2.6.32` 中它正式改名为 `Performance Event`, 因为 `perf` 已不再仅仅作为 `PMU` 的抽象, 而是能够处理**所有的性能相关**的事件.
 
 通过perf，你可以发现以下问题的答案：
 
@@ -108,24 +114,34 @@
 
 ## 2.1. 基本原理
 
-Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件！！！采样！！！** 进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位.
+Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件！！！采样！！！** 进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位. 
 
-perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
+**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
-Perf不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
+## 2.2. 功能概述
+
+通过它, 应用程序可以利用 `PMU`, `tracepoint` 和内核中的**特殊计数器**来进行性能统计. 
+
+它不但可以分析指定**应用程序**的性能问题（`per thread`），也可以用来分析**内核**的性能问题, 当然也可以**同时**分析**应用代码**和**内核**，从而全面理解应用程序中的性能瓶颈.
 
 - 要想从剖析中获得更多**内核相关**信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
 - 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
 
-总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
+使用 `perf`, 您可以分析程序运行期间发生的**硬件事件**，比如 `instructions retired` , `processor clock cycles` 等; 您也可以分析**软件事件**, 比如 `Page Fault` 和进程切换。
 
-perf利用Linux的**trace特性**，可以用于实时跟踪，统计**event计数**(`perf stat`)；或者使用**采样**(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+这使得 `Perf` 拥有了众多的**性能分析能力**, 举例来说，使用 `Perf` 可以计算**每个时钟周期内的指令数**, 称为 `IPC`, `IPC` 偏低表明代码没有很好地利用 `CPU`.
+
+`Perf` 还可以对程序进行**函数级别**的采样, 从而了解程序的性能瓶颈究竟在哪里等等. `Perf` 还可以替代 `strace`, 可以添加动态内核 `probe` 点. 还可以做 `benchmark` 衡量调度器的好坏.
+
+perf利用Linux的**trace特性**，可以用于实时跟踪，统计**event计数**(`perf stat`)；或者使用**采样**(`perf record`)，**报告**(`perf report|script|annotate`)的使用方式进行诊断。
 
 perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口使用。
 
 对于perf和ftrace的使用见 https://github.com/brendangregg/perf-tools
 
 而Linux有多少性能事件呢?? 下面会说到。
+
+总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
 
 # 3. 一个简单例子
 
@@ -180,21 +196,21 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 [...]
 ```
 
-这里的`perf record`命令用来追踪`block:block_rq_issue`探针, 当发起块设备I/O(磁盘io)请求时候会触发该探针.
+这里的`perf record`命令用来追踪`block:block_rq_issue`探针, 当发起**块设备I/O(磁盘io)请求**时候会**触发该探针**.
 
 `-a`选项用于追踪所有CPUs, `-g`用于记录调用栈, 追踪数据保存到了`perf.data`文件.
 
 `perf report`输出显示 2216 次`disk I/O`事件被追踪, 32.13% 负载来自dd命令. 这些命令是由内核函数`blk_peek_request()`发出, 遍历下堆栈信息, 32%负载中的58.71%来自close()系统调用.
 
-# 4. 常用命令
+# 4. 一行命令
 
 ## 4.1. 三种类型命令
 
-Brendan D. Gregg 收集和写了很多命令, 按从小到大开销进行划分, 分为三种:
+Brendan D. Gregg 收集和写了很多一行命令, 按从小到大开销进行划分, 分为三种:
 
-* statistics/count: **统计/计数**, 事件计数的增加
-* sample: 采样. 对**某几个事件**进行**采样**, 收集性能数据(比如IP和堆栈), 这就意味着每隔一段时间就会收集一次数据, 所以开销变大
-* trace: 追踪. 收集**所有事件的性能数据**
+* `statistics/count`: **统计/计数**, 只是事件**计数的增加**
+* `sample`: 采样. 对**某几个事件**进行**采样**, 收集**性能数据**(比如**IP**和**堆栈**), 这就意味着每隔一段时间就会收集一次数据, 所以开销变大
+* `trace`: 追踪. 收集**所有事件的性能数据**
 
 ## 4.2. Listing: 列出事件
 
@@ -270,7 +286,7 @@ perf stat -e 'vmscan:*' -a -I 1000
 
 子命令record
 
-子命令top, 动态显示
+子命令top, **动态显示**
 
 ```
 # Sample on-CPU functions for the specified command, at 99 Hertz:
@@ -333,7 +349,7 @@ perf top -F 49 -ns comm,dso
 
 ## 4.5. static tracing: 静态跟踪
 
-子命令record, 针对具体事件进行收集
+子命令`record`, 针对具体事件进行**收集**
 
 ```
 # Trace new processes, until Ctrl-C:
@@ -411,9 +427,9 @@ perf record -e sdt_node:http__server__request -a
 
 ## 4.6. Dynamic Tracing: 动态追踪
 
-子命令probe
+子命令**probe**, 动态
 
-子命令record, 记录probe事件
+子命令record, 记录**probe事件**
 
 ```
 # Add a tracepoint for the kernel tcp_sendmsg() function entry ("--add" is optional):
@@ -496,7 +512,7 @@ perf record -F 99 -e cpu-clock -e cs -a -g
 perf record -F 99 -e cpu-clock/max-stack=2/ -e cs/max-stack=5/ -a -g 
 ```
 
-## 4.8. Special: 特定
+## 4.8. Special: 特定命令
 
 ```
 # Record cacheline events (Linux 4.10+):
@@ -546,7 +562,7 @@ perf script -D
 perf annotate --stdio
 ```
 
-# 5. 演示
+# 5. 演示示例
 
 在Kernel Recipes 2017上，Brendan D. Gregg 分享了关于Linux perf的演讲，重点在CPU分析和火焰图工作。
 
@@ -556,16 +572,19 @@ PPT在: https://www.slideshare.net/brendangregg/kernel-recipes-2017-using-linux-
 
 2015年也有个: http://www.brendangregg.com/blog/2015-02-27/linux-profiling-at-netflix.html
 
+# 6. Prerequisites: 先决条件
 
-# 6. Perf的相关依赖
+可以通过安装`perf`包使用perf
 
-我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
+也可以在linux tree下自己编译, 具体参照下面`构建`部分
+
+为了充分利用perf，需要**符号表**(symbols)和**堆栈跟踪**(stack traces)。 这些可能在Linux发行版中默认工作，或者它们可能需要添加软件包，或使用其他配置选项重新编译内核。
 
 ## 6.1. Symbols: 符号表
 
 没有符号表，**无法**将**内存地址**翻译成**函数**和**变量名**。
 
-例如，无符号表的跟踪显示如下
+例如，无符号表的`perf report`显示如下, 只有16进制地址:
 
 ```
     57.14%     sshd  libc-2.15.so        [.] connect           
@@ -581,7 +600,7 @@ PPT在: https://www.slideshare.net/brendangregg/kernel-recipes-2017-using-linux-
                    --25.00%-- [...]
 ```
 
-有符号表的跟踪显示如下
+而安装了`openssh-server-dbgsym`和`libc6-dbgsym`后(这是在ubuntu平台), 有符号表的跟踪显示如下
 
 ```
     57.14%     sshd  libc-2.15.so        [.] __GI___connect_internal
@@ -599,7 +618,11 @@ PPT在: https://www.slideshare.net/brendangregg/kernel-recipes-2017-using-linux-
 
 如何安装符号表?
 
-对于**内核代码**的符号表，在编译内核时，使用`CONFIG_KALLSYMS=y`。 检查如下
+对于**内核代码**的符号表，
+* 可以安装对应的**debuginfo**包. 
+* 在编译内核时，使用`CONFIG_KALLSYMS=y`。 
+
+检查如下
 
 ```
 # cat /boot/config-`uname -r` |grep CONFIG_KALLSYMS
@@ -608,92 +631,522 @@ CONFIG_KALLSYMS_ALL=y
 CONFIG_KALLSYMS_EXTRA_PASS=y
 ```
 
-对于用户安装软件的符号表，如果是**yum安装**的，可以安装对应的**debuginfo**包。
+对于**用户安装软件**的符号表，
+* 如果是**yum安装**的，查找debug包(一般是`-dbgsym`结尾(ubuntu), )。
+* 如果是用户自己编译的，例如使用**GCC编译**时加上`-g`选项。
 
-如果是用户自己编译的，例如使用**GCC编译**时加上`-g`选项。
+## 6.2. JIT符号表(Java, Node.js)
 
-## 6.2. perf annotate
+ignore
 
-`perf annotate`能够提供源码信息, 不过需要在应用编译的时候带有`-ggdb`.
+## 6.3. Stack Traces: 堆栈追踪
 
-## 6.3. Stack Traces
+应该始终编译带有`frame pointers`. 忽略`frame pointers`是一个不利于debug的编译优化, 但通常是默认的. 
 
-(使用`perf record -g`收集stack traces)
+没有`frame pointers`情况下, 可能会看到不完整的堆栈. 有3个方式修复:
+* 使用**dwarf数据**unwind(放开)堆栈;
+* 使用**上一个分支记录**（last branch record, LBR）（如果可用）（**处理器功能**）;
+* 返回帧指针(frame pointer)
 
-要跟踪完整的stack，编译时需要注意几个东西。
+还有其他堆栈遍历(stack walking)技术，例如BTS（Branch Trace Store, 分支跟踪存储）和新的ORC展开器(ORC unwinder)。 
 
-1. 编译perf时候需要包含`libunwind`和`-g dwarf`
+### 6.3.1. Frame Pointer: 不让忽略frame pointer
 
-2. 有些编译优化项会忽略frame pointer，所以编译**应用软件**时必须指定 `-fno-omit-frame-pointer` ，才能跟踪完整的stack trace.
+前面的sshd例子是通过默认方式构建的OpenSSH, 默认情况下会使用编译优化(`-O2`), 这个选项会忽略帧指针. 
 
-3. **编译内核**时包含 `CONFIG_FRAME_POINTER=y`
+当通过`-fno-omit-frame-pointer`选项重新编译后:
 
-## 6.4. 小结
+```
+    100.00%     sshd  libc-2.15.so   [.] __GI___connect_internal
+               |
+               --- __GI___connect_internal
+                  |          
+                  |--30.00%-- add_one_listen_addr.isra.0
+                  |          add_listen_addr
+                  |          fill_default_server_options
+                  |          main
+                  |          __libc_start_main
+                  |          
+                  |--20.00%-- __nscd_get_mapping
+                  |          __nscd_get_map_ref
+                  |          
+                  |--20.00%-- __nscd_open_socket
+                   --30.00%-- [...]
+```
+
+对比可以看到, `add_one_listen_addr`的被调函数等.
+
+kernel可能也会遇到这个问题, 下面是一个cpu profile的stack trace(`-g`)例子, 
+
+```
+    99.97%  swapper  [kernel.kallsyms]  [k] default_idle
+            |
+            --- default_idle
+
+     0.03%     sshd  [kernel.kallsyms]  [k] iowrite16   
+               |
+               --- iowrite16
+                   __write_nocancel
+                   (nil)
+```
+
+kernel的stack trace是不完整的, 而打开`CONFIG_FRAME_POINTER=y`的例子如下:
+
+```
+    99.97%  swapper  [kernel.kallsyms]  [k] default_idle
+            |
+            --- default_idle
+                cpu_idle
+               |          
+               |--87.50%-- start_secondary
+               |          
+                --12.50%-- rest_init
+                          start_kernel
+                          x86_64_start_reservations
+                          x86_64_start_kernel
+
+     0.03%     sshd  [kernel.kallsyms]  [k] iowrite16
+               |
+               --- iowrite16
+                   vp_notify
+                   virtqueue_kick
+                   start_xmit
+                   dev_hard_start_xmit
+                   sch_direct_xmit
+                   dev_queue_xmit
+                   ip_finish_output
+                   ip_output
+                   ip_local_out
+                   ip_queue_xmit
+                   tcp_transmit_skb
+                   tcp_write_xmit
+                   __tcp_push_pending_frames
+                   tcp_sendmsg
+                   inet_sendmsg
+                   sock_aio_write
+                   do_sync_write
+                   vfs_write
+                   sys_write
+                   system_call_fastpath
+                   __write_nocancel
+```
+
+从`write()`syscall(`__write_nocancel`)到`iowrite16`都可以看到.
+
+### 6.3.2. Dwarf: 用户级释放堆栈
+
+从3.9内核开始，`perf_events`就支持在**用户级堆栈**中**缺少帧指针**的解决方法：`libunwind`，它使用`dwarf`。 
+
+需要在perf编译时包含`libunwind`, 然后在使用perf时通过“`--call-graph dwarf`”（或“ `-g dwarf`”）启用。
+
+参阅“`构建`”部分，以获取有关构建perf_events的其他说明，因为如果没有正确的库，它可能会在没有dwarf支持的情况下自行构建。
+
+### 6.3.3. LBR: 硬件能力
+
+`--call-graph lbr`
+
+lbr如果硬件不支持, 可能会有如下报错
+
+```
+# perf record -F 99 -a --call-graph lbr
+Error:
+PMU Hardware doesn't support sampling/overflow-interrupts.
+```
+
+正常可以运行的话, 类似于下面:
+
+```
+# perf record -F 99 -a --call-graph lbr
+^C[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 0.903 MB perf.data (163 samples) ]
+# perf script
+[...]
+stackcollapse-p 23867 [007] 4762187.971824:   29003297 cycles:ppp:
+                  1430c0 Perl_re_intuit_start (/usr/bin/perl)
+                  144118 Perl_regexec_flags (/usr/bin/perl)
+                   cfcc9 Perl_pp_match (/usr/bin/perl)
+                   cbee3 Perl_runops_standard (/usr/bin/perl)
+                   51fb3 perl_run (/usr/bin/perl)
+                   2b168 main (/usr/bin/perl)
+
+stackcollapse-p 23867 [007] 4762187.980184:   31532281 cycles:ppp:
+                   e3660 Perl_sv_force_normal_flags (/usr/bin/perl)
+                  109b86 Perl_leave_scope (/usr/bin/perl)
+                  1139db Perl_pp_leave (/usr/bin/perl)
+                   cbee3 Perl_runops_standard (/usr/bin/perl)
+                   51fb3 perl_run (/usr/bin/perl)
+                   2b168 main (/usr/bin/perl)
+
+stackcollapse-p 23867 [007] 4762187.989283:   32341031 cycles:ppp:
+                   cfae0 Perl_pp_match (/usr/bin/perl)
+                   cbee3 Perl_runops_standard (/usr/bin/perl)
+                   51fb3 perl_run (/usr/bin/perl)
+                   2b168 main (/usr/bin/perl)
+```
+
+注意: LBR通常有**堆栈深度限制**（8帧，16帧或32帧），因此它可能不适合用于深堆栈或火焰图生成，因为火焰图需要遍历到共同的根进行合并。
+
+下面是默认的frame pointer遍历
+
+```
+# perf record -F 99 -a -g
+^C[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 0.882 MB perf.data (81 samples) ]
+# perf script
+[...]
+stackcollapse-p 23883 [005] 4762405.747834:   35044916 cycles:ppp:
+                  135b83 [unknown] (/usr/bin/perl)
+
+stackcollapse-p 23883 [005] 4762405.757935:   35036297 cycles:ppp:
+                   ee67d Perl_sv_gets (/usr/bin/perl)
+
+stackcollapse-p 23883 [005] 4762405.768038:   35045174 cycles:ppp:
+                  137334 [unknown] (/usr/bin/perl)
+```
+
+你可以
+* 以frame pointer方式重新编译perl, 编译选项是`-fno-omit-frame-pointer`;
+* 或者lbr选项, 只要不需要深堆栈
+
+### 6.3.4. 小结
+
+(使用`perf record -g`**收集stack traces**)
+
+要跟踪完整的stack，3种办法(其一即可)。
+
+1. perf支持dwarf.
+  * 编译perf时候需要包含`libunwind`
+  * 使用perf时使用`--call-graph dwarf`或`-g dwarf`
+2. 编译时取消frame pointer优化.
+  * 编译**应用软件**时必须指定 `-fno-omit-frame-pointer` ，才能跟踪完整的stack trace.
+  * **编译内核**时包含 `CONFIG_FRAME_POINTER=y`
+3. 硬件支持lbr选项
+  * perf使用时带`--call-graph lbr`
+
+
+
 
 总结一下，要愉快的跟踪更完备的信息，就要在**编译软件**时打开符号表的支持(`gcc -g`)，开启**annotate**的支持(`gcc -ggdb`)，以及**Stack trace**的支持(`gcc -fno-omit-frame-pointer`)。
 
-# 7. Perf 安装
+# 7. 功能概述
 
-centos你可以使用yum安装，也可以使用源码安装。
+perf提供了命令行工具`perf`, 以及**很多子命令**. 这是提供各种事件的不同检测框架的单一接口。
 
-perf 在内核源码包中的位置 tools/perf。
-
-Acme是Linux perf的maintainer，他的`perf/core`分支包含了perf工具的最新功能。所以如果想体验最新版本的perf，可以下载和编译Acme的perf：
-
-## 7.1. 安装依赖库
-
-安装依赖库，有一个小窍门可以找到依赖的库
+单个perf命令会列出所有的子命令
 
 ```
-# cat Makefile |grep found
+# ./perf
+
+ usage: perf [--version] [--help] [OPTIONS] COMMAND [ARGS]
+
+ The most commonly used perf commands are:
+   annotate        Read perf.data (created by perf record) and display annotated code
+   archive         Create archive with object files with build-ids found in perf.data file
+   bench           General framework for benchmark suites
+   buildid-cache   Manage build-id cache.
+   buildid-list    List the buildids in a perf.data file
+   c2c             Shared Data C2C/HITM Analyzer.
+   config          Get and set variables in a configuration file.
+   data            Data file related processing
+   diff            Read perf.data files and display the differential profile
+   evlist          List the event names in a perf.data file
+   ftrace          simple wrapper for kernel's ftrace functionality
+   inject          Filter to augment the events stream with additional information
+   kallsyms        Searches running kernel for symbols
+   kmem            Tool to trace/measure kernel memory properties
+   kvm             Tool to trace/measure kvm guest os
+   list            List all symbolic event types
+   lock            Analyze lock events
+   mem             Profile memory accesses
+   record          Run a command and record its profile into perf.data
+   report          Read perf.data (created by perf record) and display the profile
+   sched           Tool to trace/measure scheduler properties (latencies)
+   script          Read perf.data (created by perf record) and display trace output
+   stat            Run a command and gather performance counter statistics
+   test            Runs sanity tests.
+   timechart       Tool to visualize total system behavior during a workload
+   top             System profiling tool.
+   version         display the version of perf binary
+   probe           Define new dynamic tracepoints
+   trace           strace inspired tool
+
+ See 'perf help COMMAND' for more information on a specific command.
 ```
 
-## 7.2. 测试
+No.|sub-commands|comment
+:------:|:------:|:------
+01 | annotate      |根据数据文件（perf.data），注解被采样到的函数，显示指令级别的热点。
+02 | archive       |根据数据文件中记录的build-id，将所有被采样到的ELF文件打成压缩包。利用此压缩包，可以在任何机器上分析数据文件中的采样数据。
+03 | bench         |Perf中内置的benchmark，目前包括两套针对调度器和内存管理子系统的benchmark。
+04 | buildid-cache |管理perf的buildid缓存。每个ELF文件都有一个独一无二的buildid。Buildid被perf用来关联性能数据与ELF文件。
+05 | buildid-list  |列出数据文件中记录的所有buildid。
+06 | config        |从配置文件中设置读取变量。
+07 | data          |数据文件的相关处理。
+08 | diff          |对比两个数据文件的差异。能够给出每个符号（函数）在热点分析上的具体差异。
+09 | evlist        |列出数据文件中的所有性能事件。
+10 | ftrace        |调用ftrace功能。
+11 | inject        |该工具读取perf record工具记录的事件流，并将其定向到标准输出。在被分析代码中的任何一点，都可以向事件流中注入其他事件。
+12 | kallsyms      |查询运行内核的符号信息。
+13 | kmem          |针对内存子系统的分析工具。
+14 | kvm           |此工具可以用来追踪、测试运行与KVM虚拟机上的Guest OS。
+15 | list          |列出当前系统支持的所有性能事件。包括硬件性能事件、软件性能事件以及检查点。
+16 | lock          |分析内核中的加锁信息。包括锁的争用情况，等待延迟等。
+17 | mem           |剖析内存访问信息。
+18 | record        |收集采样信息，并将其记录在数据文件中。随后可通过其他工具对数据文件进行分析。
+19 | report        |读取perf record创建的数据文件，并给出热点分析结果。
+20 | sched         |针对调度器子系统的分析工具。
+21 | script        |执行perl或python写的功能扩展脚本、生成脚本框架、读取数据文件中的数据信息等。
+22 | stat          |剖析某个特定进程的性能概况，包括CPU、Cache Miss率等。
+23 | test          |Perf针对当前软硬平台的测试工具。可以用此工具测试当前软硬件平台是否能够支持perf的所有功能。
+24 | timechart     |生成一幅描述处理器与各进程状态变化的矢量图。
+25 | top           |类似于Linux的top命令，对系统性能进行实时分析。
+26 | probe         |用于定义动态检查点。
+27 | trace         |类似strace功能。
+
+除了**每个子命令的单独帮助**(`./perf --help sub_command`)外，内核源代码中的`tools/perf/Documentation`下也有文档。
+
+Perf是一个包含很多种子工具的多功能工具集，功能很全面。
+
+## 7.1. 全局性概况
+
+* perf list: 查看当前系统支持的性能事件；
+* perf bench: 对系统性能进行摸底；
+* perf test: 对系统进行健全性测试；
+* perf stat: 对全局性能进行统计；
+
+## 7.2. 全局细节
+
+* perf top可以实时查看当前系统进程函数占用率情况；
+* perf probe可以自定义动态事件；
+
+## 7.3. 特定功能分析
+
+有许多子命令提供特殊用途的功能。这些包括：
+
+* perf c2c: `cache-2-cache`和cacheline错误共享分析
+* perf kmem: 针对slab子系统性能分析；
+* perf kvm: 针对kvm虚拟化分析；
+* perf lock: 分析锁性能；
+* perf mem: 分析内存slab性能；
+* perf sched: 分析内核调度器性能；
+* perf trace: 记录系统调用轨迹；
+
+## 7.4. perf record
+
+最常用功能perf record，可以系统全局，也可以具体到**某个进程**，更甚具体到**某一进程某一事件**；可宏观，也可以很微观。
+
+* pref record记录信息到perf.data；
+* perf report生成报告；
+* perf diff对两个记录进行diff；
+* perf evlist列出记录的性能事件；
+* perf annotate显示perf.data函数代码；
+* perf archive将相关符号打包，方便在其它机器进行分析；
+* perf script将perf.data输出可读性文本；
+
+`perf annotate`能够提供**源码信息**, 不过需要在应用编译的时候带有`-ggdb`.
+
+## 7.5. 可视化工具perf timechart
+
+* perf timechart record记录事件；
+* perf timechart生成output.svg文档；
+
+## 7.6. 3种使用方式和性能分析的3个过程
+
+perf工具可以分为**三种方式**：
+
+* `counting`(**计数**): 在**内核上下文**中对事件进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。
+* `sampling`(**采样**): 采样事件，将**事件数据**写入**内核缓冲区**，perf命令以柔和的异步速率读取事件数据，以写入`perf.data`文件。 然后，perf report或perf script命令将**读取此文件**。
+* `bpf`: 关于事件的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的数据过滤和汇总。 例如，有效测量的时间延迟直方图。
+
+而这也对应了性能分析的三个过程: 
+
+1. 先尝试从**事件计数**开始, 使用`perf stat`命令，看是否足够。 该子命令**开销最少**。
+2. 再是**采样模式**, 使用`perf record`命令，需要对开销稍加注意，因为捕获文件会迅速变为数百兆字节。 这取决于**跟踪的事件的速率**：频率越高，开销越高，`perf.data`数据大小也越大。
+3. 要真正**减少开销**并生成更多**高级摘要**，需要编写由perf执行的**BPF程序**。 请参阅[eBPF](http://www.brendangregg.com/perf.html#eBPF)部分。
+
+## 7.7. 使用示例
+
+选择这些例子是为了说明perf的**不同使用方式**, 从收集到报告.
+
+1. **gzip命令**的**性能计数**摘要，包括IPC等：
 
 ```
-[root@centos7 linux]# make -C tools/perf -f tests/make
+# perf stat gzip XXX
 ```
 
-## 7.3. 编译
+```
+# perf stat gzip centos.qcow2
+
+ Performance counter stats for 'gzip centos.qcow2':
+
+         80,777.53 msec task-clock                #    1.000 CPUs utilized
+               157      context-switches          #    0.002 K/sec
+                20      cpu-migrations            #    0.000 K/sec
+               141      page-faults               #    0.002 K/sec
+   249,822,322,306      cycles                    #    3.093 GHz
+   360,334,876,460      instructions              #    1.44  insn per cycle
+    71,652,946,820      branches                  #  887.041 M/sec
+     2,931,602,779      branch-misses             #    4.09% of all branches
+
+      80.781238213 seconds time elapsed
+
+      79.914249000 seconds user
+       0.863981000 seconds sys
+```
+
+其中:
+* `task-clock`(用于执行程序的CPU时间)
+* `context-switches`(程序在运行过程中发生的上下文切换次数)
+* `cpu-migrations`(程序在运行过程中发生的CPU迁移次数，即被调度器从一个CPU转移到另外一个CPU上运行)
+* `page-faults`(缺页)
+* `cycles`(CPU时钟周期)
+* `instructions`(该进程在这段时间内完成的CPU指令)
+* `branches`(这段时间内发生分支预测的次数)
+* `branch-misses`(这段时间内分支预测失败的次数)
+
+2. 统计(count)5秒的**所有调度程序进程事件**，按**tracepoint**计数：
 
 ```
-[root@centos7 linux]# make -C tools/perf
+# perf stat -e 'sched:sched_process_*' -a sleep 5
 ```
 
-## 7.4. 安装
+```
+# perf stat -e 'sched:sched_process_*' -a sleep 5
+
+ Performance counter stats for 'system wide':
+
+                10      sched:sched_process_free
+                11      sched:sched_process_exit
+                15      sched:sched_process_wait
+                10      sched:sched_process_fork
+                 5      sched:sched_process_exec
+                 0      sched:sched_process_hang
+
+       5.001998189 seconds time elapsed
+```
+
+3. 跟踪(trace)5秒的**所有调度程序进程事件**，按**tracepoint**和**进程名称**计数：
 
 ```
-[root@centos7 linux]# make -C tools/perf install
+# perf record -e 'sched:sched_process_*' -a sleep 5
+# perf report
 ```
 
-## 7.5. 帮助文档
+```
+# perf record -e 'sched:sched_process_*' -a sleep 5
+Couldn't synthesize bpf events.
+Couldn't synthesize cgroup events.
+[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 0.341 MB perf.data (51 samples) ]
+
+# perf report
+```
+
+4. 跟踪(trace)5秒的**所有调度程序进程事件**，并且**dump详细信息**：
 
 ```
-man 1 perf
-man 1 perf-stat
-man 1 perf-top
-man 1 perf-record
-man 1 perf-report
-man 1 perf-list
+# perf record -e 'sched:sched_process_*' -a sleep 5
+# perf script
+```
+
+```
+# perf record -e 'sched:sched_process_*' -a sleep 5
+Couldn't synthesize bpf events.
+Couldn't synthesize cgroup events.
+[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 0.341 MB perf.data (51 samples) ]
+
+# perf script
+           sleep 12110 [049]  1440.744947: sched:sched_process_exec: filename=/usr/bin/sleep pid=12110 old_pid=12110
+           httpd  3404 [048]  1440.775205: sched:sched_process_wait: comm=httpd pid=0 prio=120
+         systemd     1 [049]  1441.176507: sched:sched_process_fork: comm=systemd pid=1 child_comm=systemd child_pid=12112
+         systemd 12112 [000]  1441.176528: sched:sched_process_exit: comm=systemd pid=12112 prio=120
+         swapper     0 [000]  1441.191201: sched:sched_process_free: comm=systemd pid=12112 prio=120
+           httpd  3404 [048]  1441.776216: sched:sched_process_wait: comm=httpd pid=0 prio=120
+           sleep 12105 [048]  1442.096322: sched:sched_process_exit: comm=sleep pid=12105 prio=120
+ safe_TsysAgent.  4052 [001]  1442.096353: sched:sched_process_wait: comm=safe_TsysAgent. pid=0 prio=120
+ safe_TsysAgent.  4052 [001]  1442.096483: sched:sched_process_fork: comm=safe_TsysAgent. pid=4052 child_comm=safe_TsysAgent. child_pid=12113
+ ......
+```
+
+5. 跟踪(trace)`read()`系统调用, 并且请求的bytes小于10:
+
+```
+# perf record -e 'syscalls:sys_enter_read' --filter 'count < 10' -a
+```
+
+```
+# perf record -e 'syscalls:sys_enter_read' --filter 'count < 10' -a
+Couldn't synthesize bpf events.
+Couldn't synthesize cgroup events.
+^C[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 0.534 MB perf.data (133 samples) ]
+```
+
+6. **采样**(sample)CPU**堆栈**, 以 99 Hertz, 持续5秒:
+
+```
+# perf record -F 99 -ag -- sleep 5
+# perf report
+```
+
+```
+# perf record -F 99 -ag -- sleep 5
+
+# perf report
+```
+
+7. **动态**检测内核`tcp_sendmsg()`函数，并**跟踪堆栈**, 持续5秒钟：
+
+```
+# perf probe --add tcp_sendmsg
+# perf record -e probe:tcp_sendmsg -ag -- sleep 5
+# perf probe --del tcp_sendmsg
+# perf report
+```
+
+```
+# ./perf probe --add tcp_sendmsg
+Added new event:
+  probe:tcp_sendmsg    (on tcp_sendmsg)
+
+You can now use it in all perf tools, such as:
+
+	perf record -e probe:tcp_sendmsg -aR sleep 1
+
+# ./perf record -e probe:tcp_sendmsg -ag -- sleep 5
+Couldn't synthesize bpf events.
+Couldn't synthesize cgroup events.
+[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 0.333 MB perf.data (4 samples) ]
+
+# ./perf probe --del tcp_sendmsg
+Removed event: probe:tcp_sendmsg
+
+# ./perf report
 ```
 
 # 8. Perf 性能事件
 
-利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，**可能影响到程序性能**的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
+利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。
 
-因此，必须先利用perf等性能剖析工具查找引发这些性能事件的热点代码以及热点指令。
+性能事件在不同系统中是不同的。如果一些事件会对程序的执行时间造成较大的负面影响, 在优化代码时，应尽可能减少此类事件发生。
 
-使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
+因此，必须先利用perf等性能剖析工具查找**引发这些性能事件**的**热点代码**以及**热点指令**。
 
 ![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
 
-这张图大致列出了perf支持的跟踪事件，从kernerl到user space，支持块设备、网络、CPU、文件系统、内存等，同时还支持系统调用，用户库的事件跟踪。
+>这个图来自: http://www.brendangregg.com/perf.html#SCALE13x
+
+这张图大致列出了perf支持的跟踪事件源.
 
 我们看到perf支持这么多的事件和trace，它**依赖了很多的接口**来干这件事情。
 
 ## 8.1. perf list查看所有性能事件
 
-不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
+**不同型号的CPU**支持的**硬件性能事件**不尽相同。**不同版本的内核**提供的**软件性能事件**与 **Tracepoint events** 也不尽相同。
+
+因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
 
 使用方法如下：
 
@@ -709,7 +1162,7 @@ man 1 perf-list
         --details         Print information on the perf event names and expressions used internally by events.
 ```
 
-执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是Tracepoint events。
+执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是`Tracepoint events`。
 
 ![2020-07-19-21-04-27.png](./images/2020-07-19-21-04-27.png)
 
@@ -717,16 +1170,17 @@ man 1 perf-list
 
 ![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
 
-## 8.2. 六种类型
+## 8.2. 六种类型事件
 
 六种类型的事件:
-
-* Hardware Events: CPU performance monitoring counters.
-* Software Events: These are low level events based on kernel counters. For example, CPU migrations, minor faults, major faults, etc.
-* Kernel Tracepoint Events: This are static kernel-level instrumentation points that are hardcoded in interesting and logical places in the kernel.
-* User Statically-Defined Tracing (USDT): These are static tracepoints for user-level programs and applications.
-* Dynamic Tracing: Software can be dynamically instrumented, creating events in any location. For kernel software, this uses the kprobes framework. For user-level software, uprobes.
-* Timed Profiling: Snapshots can be collected at an arbitrary frequency, using perf record -FHz. This is commonly used for CPU usage profiling, and works by creating custom timed interrupt events.
+* **硬件事件**(`Hardware Events`): CPU性能监控计数(CPU performance monitoring counters).
+* **软件事件**(`Software Events`): 这些是基于内核计数器的低级事件. 比如, CPU迁移、次要故障和主要故障等等.
+* **内核tracepoint事件**(`Kernel Tracepoint Events`): 这些是内核中的静态检测点, 是在内核合适位置硬编码进去的.
+* **用户静态定义追踪**(`User Statically-Defined Tracing`, USDT): 这些是用户态程序中的静态tracepoint.
+* **动态追踪**(`Dynamic Tracing`): 可以在软件的任何位置创建事件, 从而可以被动态检测. 
+  * 对于**内核**来说, 利用了`kprobes`框架;
+  * 对于**用户态**程序, 使用了`uprobes`.
+* **定时分析**(`Timed Profiling`): 使用`perf record -F Hz`, 能够以任意频率收集快照(当时的系统信息). 这通常用于**CPU使用情况**分析, 并且通过**创建自定义定时中断事件**来工作..
 
 ### 8.2.1. Hardware Events (PMCs): 硬件性能事件(PMCs)
 
@@ -1034,9 +1488,9 @@ The overhead while dynamic tracing is in use, and extra instructions are being e
        1.936842598 seconds time elapsed
 ```
 
-### CPU 微架构
+### 9.1.1. CPU 微架构
 
-### Detailed Mode
+### 9.1.2. Detailed Mode
 
 `perf stat`有一个Detailed Mode, 通过`-d`选项:
 
@@ -1068,11 +1522,11 @@ This includes additional counters for Level 1 data cache events, and last level 
 
 这个额外包含了L1 data cache(L1 数据缓存)和LLC cache(最后一级缓存)事件.
 
-### Specific Counters
+### 9.1.3. Specific Counters
 
-### Raw Counters
+### 9.1.4. Raw Counters
 
-### Other Options
+### 9.1.5. Other Options
 
 
 ## 9.2. Timed Profiling:
@@ -1089,17 +1543,17 @@ This includes additional counters for Level 1 data cache events, and last level 
 
 ## 9.8. eBPF
 
-### 8.2.6. 
+### 9.8.1. 
 
-### 8.2.7. 事件限定符
+### 9.8.2. 事件限定符
 
 事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
 
 https://blog.gmem.cc/perf
 
-## 8.3. 性能事件的属性
+## 9.9. 性能事件的属性
 
-### 8.3.1. PMI中断和PEBS中断
+### 9.9.1. PMI中断和PEBS中断
 
 perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
@@ -1124,7 +1578,7 @@ record子命令默认使用cycle事件，类似于定期采样。
 perf top -e cycles:pp
 ```
 
-### 8.3.2. 性能事件的精度级别
+### 9.9.2. 性能事件的精度级别
 
 Perf 在采样精度上定义了 4 个级别.
 
@@ -1137,7 +1591,7 @@ Level | Comment
 
 目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
 
-### 8.3.3. 其他属性
+### 9.9.3. 其他属性
 
 除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
 
@@ -1150,7 +1604,7 @@ G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
 H | 仅统计Host系统触发的性能事件。
 p | 精度级别。
 
-## 8.4. 没有预定义字符描述的硬件性能事件
+## 9.10. 没有预定义字符描述的硬件性能事件
 
 另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
 
@@ -1173,7 +1627,7 @@ perf stat -e r010b ls
 所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
 
-## 8.5. 性能事件指定错误
+## 9.11. 性能事件指定错误
 
 所以如果指定性能事件失败, 可能会有类似打印
 
@@ -1271,89 +1725,51 @@ perf内置了一个可视化: timecharts, 以及通过文本用户界面(TUI)和
 
 
 
-# 11. Perf 功能概述
 
-perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+# 11. Perf 安装
 
-perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+centos你可以使用yum安装，也可以使用源码安装。
 
-参考 https://github.com/brendangregg/perf-tools
+perf 在内核源码包中的位置 tools/perf。
 
-perf 命令用法还是挺简单的，根据功能区分了COMMAND，每个COMMAND有各自的用法。
+Acme是Linux perf的maintainer，他的`perf/core`分支包含了perf工具的最新功能。所以如果想体验最新版本的perf，可以下载和编译Acme的perf：
 
-![2020-07-20-08-26-42.png](./images/2020-07-20-08-26-42.png)
+## 11.1. 安装依赖库
 
-每种功能使用命令`./perf --help CMD`查看用法等.
+安装依赖库，有一个小窍门可以找到依赖的库
 
-Perf是一个包含27种子工具的工具集，功能很全面。
+```
+# cat Makefile |grep found
+```
 
-No.|sub-commands|comment
-:------:|------:|:------
-01 | annotate      |根据数据文件（perf.data），注解被采样到的函数，显示指令级别的热点。
-02 | archive       |根据数据文件中记录的build-id，将所有被采样到的ELF文件打成压缩包。利用此压缩包，可以在任何机器上分析数据文件中的采样数据。
-03 | bench         |Perf中内置的benchmark，目前包括两套针对调度器和内存管理子系统的benchmark。
-04 | buildid-cache |管理perf的buildid缓存。每个ELF文件都有一个独一无二的buildid。Buildid被perf用来关联性能数据与ELF文件。
-05 | buildid-list  |列出数据文件中记录的所有buildid。
-06 | config        |从配置文件中设置读取变量。
-07 | data          |数据文件的相关处理。
-08 | diff          |对比两个数据文件的差异。能够给出每个符号（函数）在热点分析上的具体差异。
-09 | evlist        |列出数据文件中的所有性能事件。
-10 | ftrace        |调用ftrace功能。
-11 | inject        |该工具读取perf record工具记录的事件流，并将其定向到标准输出。在被分析代码中的任何一点，都可以向事件流中注入其他事件。
-12 | kallsyms      |查询运行内核的符号信息。
-13 | kmem          |针对内存子系统的分析工具。
-14 | kvm           |此工具可以用来追踪、测试运行与KVM虚拟机上的Guest OS。
-15 | list          |列出当前系统支持的所有性能事件。包括硬件性能事件、软件性能事件以及检查点。
-16 | lock          |分析内核中的加锁信息。包括锁的争用情况，等待延迟等。
-17 | mem           |剖析内存访问信息。
-18 | record        |收集采样信息，并将其记录在数据文件中。随后可通过其他工具对数据文件进行分析。
-19 | report        |读取perf record创建的数据文件，并给出热点分析结果。
-20 | sched         |针对调度器子系统的分析工具。
-21 | script        |执行perl或python写的功能扩展脚本、生成脚本框架、读取数据文件中的数据信息等。
-22 | stat          |剖析某个特定进程的性能概况，包括CPU、Cache Miss率等。
-23 | test          |Perf针对当前软硬平台的测试工具。可以用此工具测试当前软硬件平台是否能够支持perf的所有功能。
-24 | timechart     |生成一幅描述处理器与各进程状态变化的矢量图。
-25 | top           |类似于Linux的top命令，对系统性能进行实时分析。
-26 | probe         |用于定义动态检查点。
-27 | trace         |类似strace功能。
+## 11.2. 测试
 
-## 11.1. 全局性概况
+```
+[root@centos7 linux]# make -C tools/perf -f tests/make
+```
 
-* perf list查看当前系统支持的性能事件；
-* perf bench对系统性能进行摸底；
-* perf test对系统进行健全性测试；
-* perf stat对全局性能进行统计；
+## 11.3. 编译
 
-## 11.2. 全局细节
+```
+[root@centos7 linux]# make -C tools/perf
+```
 
-* perf top可以实时查看当前系统进程函数占用率情况；
-* perf probe可以自定义动态事件；
+## 11.4. 安装
 
-## 11.3. 特定功能分析
+```
+[root@centos7 linux]# make -C tools/perf install
+```
 
-perf kmem针对slab子系统性能分析；
-perf kvm针对kvm虚拟化分析；
-perf lock分析锁性能；
-perf mem分析内存slab性能；
-perf sched分析内核调度器性能；
-perf trace记录系统调用轨迹；
+## 11.5. 帮助文档
 
-## 11.4. perf record
-
-最常用功能perf record，可以系统全局，也可以具体到**某个进程**，更甚具体到**某一进程某一事件**；可宏观，也可以很微观。
-
-* pref record记录信息到perf.data；
-* perf report生成报告；
-* perf diff对两个记录进行diff；
-* perf evlist列出记录的性能事件；
-* perf annotate显示perf.data函数代码；
-* perf archive将相关符号打包，方便在其它机器进行分析；
-* perf script将perf.data输出可读性文本；
-
-## 11.5. 可视化工具perf timechart
-
-perf timechart record记录事件；
-perf timechart生成output.svg文档；
+```
+man 1 perf
+man 1 perf-stat
+man 1 perf-top
+man 1 perf-record
+man 1 perf-report
+man 1 perf-list
+```
 
 # 12. 简单示例
 
